// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createAsyncComponent returns error state: Error loading bar: Error! 1`] = `
<DocumentFragment>
  <div>
    Error loading bar: Error!
  </div>
</DocumentFragment>
`;

exports[`createAsyncComponent returns loading state: Hello world bar 1`] = `
<DocumentFragment>
  <div>
    Hello world bar
  </div>
</DocumentFragment>
`;

exports[`createAsyncComponent returns loading state: Loading bar... 1`] = `
<DocumentFragment>
  <div>
    Loading bar...
  </div>
</DocumentFragment>
`;

exports[`createAsyncComponent returns null error state: Empty DocumentFragment 1`] = `<DocumentFragment />`;

exports[`createAsyncComponent should cache component in production: Hello world bar [cached] 1`] = `
<DocumentFragment>
  <div>
    Hello world bar
  </div>
</DocumentFragment>
`;

exports[`createAsyncComponent should cache component in production: Hello world bar 1`] = `
<DocumentFragment>
  <div>
    Hello world bar
  </div>
</DocumentFragment>
`;

exports[`createAsyncComponent should preload and cache component in production: Hello world bar 1`] = `
<DocumentFragment>
  <div>
    Hello world bar
  </div>
</DocumentFragment>
`;

exports[`createAsyncComponent should preload component: Hello world bar 1`] = `
<DocumentFragment>
  <div>
    Hello world bar
  </div>
</DocumentFragment>
`;

exports[`createAsyncComponent works w/ class component 1`] = `
<DocumentFragment>
  <div>
    Hello world bar
  </div>
</DocumentFragment>
`;

exports[`createAsyncComponent works w/ function component 1`] = `
<DocumentFragment>
  <div>
    Hello world bar
  </div>
</DocumentFragment>
`;
